[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/02_scenes/01_UI/05_CharacterSheet/01_CharacterParam/ParamItem.gd" type="Script" id=1]
[ext_resource path="res://src/02_scenes/01_UI/02_Themes/CustomTheme.tres" type="Theme" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://src/01_assets/04_Fonts/Mister Pixel Regular.otf"

[sub_resource type="DynamicFont" id=2]
size = 6
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://src/01_assets/04_Fonts/Mister Pixel Regular.otf"

[sub_resource type="DynamicFont" id=4]
size = 6
font_data = SubResource( 3 )

[node name="ParamItem" type="HBoxContainer"]
margin_right = 154.0
margin_bottom = 12.0
mouse_filter = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParamTitle" type="Label" parent="."]
margin_top = 2.0
margin_right = 75.0
margin_bottom = 9.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
valign = 1

[node name="ParamValue" type="Label" parent="."]
margin_left = 79.0
margin_top = 2.0
margin_right = 154.0
margin_bottom = 9.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
align = 2
valign = 1
[connection signal="mouse_entered" from="." to="." method="_on_ParamItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ParamItem_mouse_exited"]
